--- a/contact_us.html
+++ b/contact_us.html
@@ -31,56 +31,115 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link   text-center" aria-current="page" href="./">
+                        <a class="nav-link active  text-center" aria-current="page" href="./">
                             <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="./party_packages.html" id="navbarDropdown"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img id="nav-icon" class="center-block" src="img/party.png" alt="">
-                            Party <br> Package
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./party_packages.html">Party Packages</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="./face_painting.html">Face Painting & temporary
-                                    Tattoo</a>
-                            </li>
-                        </ul>
+                    <li class="nav-item">
+                        <div class="btn-group">
+                            <button type="button" class="btn">
+                                <a href="./party_packages.html">
+                                    <img id="nav-icon" class="center-block" src="img/party.png" alt="">
+                                    Party <br> Package
+                                </a>
+                            </button>
+                            <button type="button" class="btn dropdown-toggle dropdown-toggle-split"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="visually-hidden">Toggle Dropdown</span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="./face_painting.html">Face Painting and Temporary
+                                        Tatto</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./balloon_sculpting.html">Balloon Sculpting</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./henna_tattoo.html">Henna Tattoo</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Mascot Package</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./jumping_castle.html">Jumping Castle</a></li>
+                            </ul>
+                        </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="./" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="true">
-                            <img id="nav-icon" class="center-block" src="img/character.png" alt="">
-                            Character <br> Package
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Item 1</a></li>
-                            <li><a class="dropdown-item" href="#">Item 2</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Item 3</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <div class="btn-group">
+                            <button type="button" class="btn">
+                                <a href="./character_packages.html">
+                                    <img id="nav-icon" class="center-block" src="img/character.png" alt="">
+                                    Character <br> Package
+                                </a>
+                            </button>
+                            <button type="button" class="btn dropdown-toggle dropdown-toggle-split"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="visually-hidden">Toggle Dropdown</span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="./fairy_package.html">Fairy Package</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./princess_package.html">Princess Package</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./pirate_package.html">Pirate Package</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./elsa_or_enna.html">The Ever Enchanting Elsa or
+                                        Anna</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./elsa_and_enna.html">Elsa and Anna</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./elsa_enna_olaf.html">Elsa, Anna, and Olaf</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./clown_package.html">Clown Package</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./superhero_package.html">Superhero Package</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./magician_package.html">Magician Package</a></li>
+                            </ul>
+                        </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="./" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
-                            Corporate <br> Package
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Item 1</a></li>
-                            <li><a class="dropdown-item" href="#">Item 2</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Item 3</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <div class="btn-group">
+                            <button type="button" class="btn">
+                                <a href="./party_packages.html">
+                                    <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
+                                    Corporate <br> Package
+                                </a>
+                            </button>
+                            <button type="button" class="btn dropdown-toggle dropdown-toggle-split"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="visually-hidden">Toggle Dropdown</span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="./sports_events.html">Sports Events</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="./xmas_events.html">Christmas Events</a></li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link  text-center" href="./gallery.html">
@@ -95,7 +154,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-center" href="./contact_us.html">
+                        <a class="nav-link  text-center" href="./contact_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/contact_icon.png" alt="">
                             Contact
                         </a>
@@ -176,7 +235,7 @@
         </div>
         <div class="container">
             <div class="row footer-div">
-                <div class="col-md-4">
+                <div class="col-md-4 footer-left">
 
                     <p class="footer-heading">Contact</p>
                     <i class="fa-solid fa-phone" style="color: white;"></i>&nbsp;&nbsp;1300 976 750
@@ -185,29 +244,32 @@
                     <br><br><br><br>
 
                     <p class="footer-heading">Social Media</p>
-                    <i class="fa-brands fa-facebook fa-2x" style="color: white;"></i> &nbsp; &nbsp;
+                    <a href="https://www.facebook.com/kidsdreamsydney/" target="_blank"><i
+                            class="fa-brands fa-facebook fa-2x" style="color: white;"></i></a> &nbsp; &nbsp;
                     <i class="fa-brands fa-instagram fa-2x" style="color: white;"></i>
 
                 </div>
 
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 footer-mid">
                     <p class="footer-heading">Gallery</p>
-                    <img src="img/gallery.png" alt=""> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <img src="img/gallery2.png" alt=""> <br><br>
-                    <img src="img/gallery.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <img src="img/gallery2.png" alt=""> <br>
+                    <a href="./gallery.html">
+                        <img src="img/gallery.png" alt=""> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <img src="img/gallery2.png" alt=""> <br><br>
+                        <img src="img/gallery.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <img src="img/gallery2.png" alt=""> <br>
+                    </a>
                 </div>
 
-                <div class="col-md-4 text-end">
+                <div class="col-md-4 footer-right">
                     <p class="footer-heading">Sitemap</p><br>
-                    Home <br>
-                    Party Package <br>
-                    Character Package <br>
-                    Corporate Package <br>
-                    Gallery <br>
-                    About Us <br>
-                    Book Now <br>
-                    Contact Us <br>
+                    <a href="./index.html">Home </a><br>
+                    <a href="./party_packages.html">Party Package </a><br>
+                    <a href="./character_packages.html">Character Package </a><br>
+                    <a href="./corporate_packages.html">Corporate Package </a><br>
+                    <a href="./gallery.html">Gallery </a><br>
+                    <a href="./about_us.html">About Us </a><br>
+                    <a href="./book_us.html">Book Now </a><br>
+                    <a href="./contact_us.html">Contact Us </a><br>
                 </div>
             </div>
         </div>
