--- a/corporate_packages.html
+++ b/corporate_packages.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gallery - Kids Party</title>
+    <title>Corporate Packages - Kids Party</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -169,90 +169,71 @@
             </div>
         </div>
     </nav>
+
     <div class="page-title-background d-flex justify-content-center align-items-center"
         style="background: url('img/topbanner.png');">
-        <div class="page-title"><br> About Us</div>
+        <div class="page-title"><br>Corporate Packages</div>
     </div>
     <div class="container main-body">
         <div class="row">
-
-            <div class="col-md-8" style="text-align: justify;">
-                The journey begins in 2008 with the magical ambition to explore the dreamland of kids on earth.
-
-                We started with the two paint brushes holding by two wonderful people with the goal to bright up every
-                faces through face painting, the Creative creation of such people led the Kids Dream to this far in the
-                magical land. <br><br>
-                Now we offering Balloon Twisting, Magic show and much more magical entertainment to bright up with loads
-                of fun to any kinds of event such as personal events to corporate events, Birthday and Opening
-                ceremonies. <br><br>
-                We are not the outlaw in the Magical Land of Earth, rather we are the responsible team with our effort
-                and equipment for our works. We use the best in the market materials for our face painting and skin
-                related materials. Under one umbrella, you will find face painter, balloon Twister, Magician, costume
-                Entertainer, Henna Artist, and Event Planner. We wish to be the part of an amazing event for you and
-                your Kids while you can sit back and relax enjoying the show.
-
-            </div>
-            <div class="col-md-4 ">
-                <img class="center-block" src="img/about_us_1.png" style="width: 80%;" alt="">
-            </div>
-        </div><br><br>
-        <div class="row">
-            <div class="col-md-2"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Face
-                    <br>
-                    Painting
+            <div class="col" id="row-1">
+                <div class="card">
+                    <form action="#">
+                        <div class="catagory_title text-center">Catagories</div>
+                        <div class="catagory_list">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Party Packages
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Character Packages
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1" checked>
+                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
+                                    Corporate packages
+                                </label>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button-custom-small" type="button" id="form-btn">Submit</button>
+                        </div>
+                    </form>
                 </div>
             </div>
-            <div class="col-md-2"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Balloon
-                    <br>
-                    Sculpting
+            <div class="col-md-9" id="row-2">
+                <div class="card">
+                    <div class="row">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-4">
+                            <a href="./face_painting.html">
+                                <div class="img-card">
+                                    <img src="img/sports.jpg" alt="">
+                                    <div class="img-title">Sports Events</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="img-card">
+                                <img src="img/xmas.jpg" alt="">
+                                <div class="img-title">Christmas Events</div>
+                            </div>
+                        </div>
+                        <div class="col-md-2"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 85px;">
-                    Games
-                </div>
-            </div>
-            <div class="col-md-2"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Music
-                    <br>
-                    Activity
-                </div>
-            </div>
-            <div class="col-md-2"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Magic
-                    <br>
-                    Show
-                </div>
-            </div>
-        </div><br><br>
-        <div class="row">
-            <div class="col-md-4">
-                <img src="./img/about_us_2.png" alt="" style="width: 100%;">
-            </div>
-            <div class="col-md-4">
-                <img src="./img/about_us_3.png" alt="" style="width: 100%;">
-            </div>
-            <div class="col-md-4">
-                <img src="./img/about_us_4.png" alt="" style="width: 100%;">
             </div>
         </div>
-    </div><br><br>
+    </div>
+
 
     <div>
         <img id="field" src="img/field.png" alt="">
