--- a/fairy_package.html
+++ b/fairy_package.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gallery - Kids Party</title>
+    <title>Fairy Package - Kids Party</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -169,90 +169,225 @@
             </div>
         </div>
     </nav>
+
     <div class="page-title-background d-flex justify-content-center align-items-center"
         style="background: url('img/topbanner.png');">
-        <div class="page-title"><br> About Us</div>
+        <div class="page-title"><br> Packages</div>
     </div>
     <div class="container main-body">
         <div class="row">
+            <div class="col" id="row-1">
+                <div class="card">
+                    <form action="#">
+                        <div class="catagory_title text-center">Catagories</div>
+                        <div class="catagory_list">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Party Packages
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1" checked>
+                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
+                                    Character Packages
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Corporate packages
+                                </label>
+                            </div>
+                        </div><br><br>
+                        <div class="catagory_title text-center">Packages</div>
+                        <div class="catagory_list">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1" checked>
+                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
+                                    Fairy package
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Princess Package
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Pirate Package
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    The Ever Enchanting Elsa or Anna
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Elsa and Anna
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Elsa, Anna, and Olaf
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Clown Package
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Superhero Package
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Magician Package
+                                </label>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button-custom-small" type="button" id="form-btn">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="col-md-9" id="row-2">
+                <div class="card">
+                    <div class="text-card">
+                        <h1 class="text-center">Fairy Package</h1>
+                    </div><br>
+                    <div class="row">
+                        <div class="col-md-8" id="row-1">
+                            <div class="text-card">
+                                <p>
+                                    Our fairy party host will take the children on an amazing adventure through the
+                                    fairyland. <br><br>
 
-            <div class="col-md-8" style="text-align: justify;">
-                The journey begins in 2008 with the magical ambition to explore the dreamland of kids on earth.
+                                    Fairy themed party going with - <br>
 
-                We started with the two paint brushes holding by two wonderful people with the goal to bright up every
-                faces through face painting, the Creative creation of such people led the Kids Dream to this far in the
-                magical land. <br><br>
-                Now we offering Balloon Twisting, Magic show and much more magical entertainment to bright up with loads
-                of fun to any kinds of event such as personal events to corporate events, Birthday and Opening
-                ceremonies. <br><br>
-                We are not the outlaw in the Magical Land of Earth, rather we are the responsible team with our effort
-                and equipment for our works. We use the best in the market materials for our face painting and skin
-                related materials. Under one umbrella, you will find face painter, balloon Twister, Magician, costume
-                Entertainer, Henna Artist, and Event Planner. We wish to be the part of an amazing event for you and
-                your Kids while you can sit back and relax enjoying the show.
+                                    Wonderful Face painting <br>
+                                    Balloon Animal<br>
+                                    Fairy Fun Games<br>
+                                    Lots of Bubbles<br>
+                                    Learn to fly like a fairy<br>
+                                    Favourite Party themed games including the Musical statue, Pass the parcel, Musical
+                                    limbo, Musical chair and more.<br><br>
 
-            </div>
-            <div class="col-md-4 ">
-                <img class="center-block" src="img/about_us_1.png" style="width: 80%;" alt="">
-            </div>
-        </div><br><br>
-        <div class="row">
-            <div class="col-md-2"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Face
-                    <br>
-                    Painting
+                                    Give your child a party full of fairy dream to share with their friends on their
+                                    exceptional day.
+                                </p>
+                            </div><br>
+                            <div class="text-card">
+                                <img src="img/phone.png" style="height: 15px;" alt="">&nbsp;&nbsp;<span
+                                    style="color:#DD3333;">
+                                    1300 976 750
+                                </span> or <span style="color:#DD3333;">0433 578 940</span> for
+                                reservation
+                            </div>
+                        </div>
+                        <div class="col-md-4" id="row-2">
+                            <div class="img-card">
+                                <img src="img/fairy.png" alt="">
+                            </div><br>
+                            <div class="text-card">
+                                <div class="row">
+                                    <div class="col" style="width: 10%;">
+                                        <img src="img/red-arrow.png" alt="">
+                                    </div>
+                                    <div class="col" style="text-align: right;">
+                                        <p style="text-align: right; font-size: 18px;">2 hours for</p>
+                                        <p style="color: #DD3333; text-align: right; font-size: 24px;"> $290</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Balloon
-                    <br>
-                    Sculpting
-                </div>
-            </div>
-            <div class="col-md-2"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 85px;">
-                    Games
-                </div>
-            </div>
-            <div class="col-md-2"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Music
-                    <br>
-                    Activity
-                </div>
-            </div>
-            <div class="col-md-2"
-                style="margin:15px; padding: 30px; background-color: rgba(0, 255, 255, 0.363); border-radius: 10%;">
-                <div
-                    style="background-color: rgba(23, 23, 65, 0.705); border-radius: 10%; text-align: center; min-height: 200px; color: white; font-size: 25px; padding-top: 60px;">
-                    Magic
-                    <br>
-                    Show
-                </div>
-            </div>
-        </div><br><br>
-        <div class="row">
-            <div class="col-md-4">
-                <img src="./img/about_us_2.png" alt="" style="width: 100%;">
-            </div>
-            <div class="col-md-4">
-                <img src="./img/about_us_3.png" alt="" style="width: 100%;">
-            </div>
-            <div class="col-md-4">
-                <img src="./img/about_us_4.png" alt="" style="width: 100%;">
             </div>
         </div>
-    </div><br><br>
+        <br>
+        <hr><br><br>
+        <div class="page-title">
+            Related Packages
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="img-card">
+                    <img src="img/princess.png" alt="">
+                    <div class="img-title">Princess Package</div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="img-card">
+                    <img src="img/pirate.png" alt="">
+                    <div class="img-title">Pirate Package</div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="img-card">
+                    <img src="img/elsa-anna.png" alt="">
+                    <div class="img-title">The Ever Enchanting Elsa or Anna</div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="img-card">
+                    <img src="img/elsa-and-anna.png" alt="">
+                    <div class="img-title">Elsa and Anna</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="img-card">
+                    <img src="img/elsa-anna-olaf.png" alt="">
+                    <div class="img-title">Elsa, Anna, and Olaf</div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="img-card">
+                    <img src="img/clown.png" alt="">
+                    <div class="img-title">Clown Package</div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="img-card">
+                    <img src="img/hero.png" alt="">
+                    <div class="img-title">Superhero Package</div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="img-card">
+                    <img src="img/magician.jpg" alt="">
+                    <div class="img-title">Magician Package</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div>
         <img id="field" src="img/field.png" alt="">
