--- a/henna_tattoo.html
+++ b/henna_tattoo.html
@@ -294,21 +294,15 @@
         </div>
         <br>
         <hr><br><br>
-        <div class="page-title">
+        <div class="page-title-black">
             Related Packages
         </div>
         <div class="row">
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/jumping_castle.png" alt="">
-                    <div class="img-title">Jumping Castle</div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <a href="./face_painting.html">
+                <a href="./jumping_castle.html">
                     <div class="img-card">
-                        <img src="img/face_paint.png" alt="">
-                        <div class="img-title">Face Painting & Temporary Tattoo</div>
+                        <img src="img/jumping_castle.png" alt="">
+                        <div class="img-title">Jumping Castle</div>
                     </div>
                 </a>
             </div>
@@ -321,10 +315,20 @@
                 </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/balloon_sculp.png" alt="">
-                    <div class="img-title">Mascot Package</div>
-                </div>
+                <a href="./face_painting.html">
+                    <div class="img-card">
+                        <img src="img/face_paint.png" alt="">
+                        <div class="img-title">Face Painting & Temporary Tattoo</div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3">
+                <a href="./mascot_package.html">
+                    <div class="img-card">
+                        <img src="img/balloon_sculp.png" alt="">
+                        <div class="img-title">Mascot Package</div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
