--- a/jumping_castle.html
+++ b/jumping_castle.html
@@ -300,16 +300,10 @@
         </div>
         <br>
         <hr><br><br>
-        <div class="page-title">
+        <div class="page-title-black">
             Related Packages
         </div>
         <div class="row">
-            <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img//henna_tattoo.png" alt="">
-                    <div class="img-title">Henna Tattoo</div>
-                </div>
-            </div>
             <div class="col-md-3">
                 <a href="./face_painting.html">
                     <div class="img-card">
@@ -327,10 +321,20 @@
                 </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/balloon_sculp.png" alt="">
-                    <div class="img-title">Mascot Package</div>
-                </div>
+                <a href="./henna_tattoo.html">
+                    <div class="img-card">
+                        <img src="img//henna_tattoo.png" alt="">
+                        <div class="img-title">Henna Tattoo</div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3">
+                <a href="./mascot_package.html">
+                    <div class="img-card">
+                        <img src="img/balloon_sculp.png" alt="">
+                        <div class="img-title">Mascot Package</div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
