--- a/balloon_sculpting.html
+++ b/balloon_sculpting.html
@@ -297,15 +297,17 @@
         </div>
         <br>
         <hr><br><br>
-        <div class="page-title">
+        <div class="page-title-black">
             Related Packages
         </div>
         <div class="row">
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/jumping_castle.png" alt="">
-                    <div class="img-title">Jumping Castle</div>
-                </div>
+                <a href="./jumping_castle.html">
+                    <div class="img-card">
+                        <img src="img/jumping_castle.png" alt="">
+                        <div class="img-title">Jumping Castle</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
                 <a href="./face_painting.html">
@@ -316,16 +318,20 @@
                 </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img//henna_tattoo.png" alt="">
-                    <div class="img-title">Henna Tattoo</div>
-                </div>
+                <a href="./henna_tattoo.html">
+                    <div class="img-card">
+                        <img src="img//henna_tattoo.png" alt="">
+                        <div class="img-title">Henna Tattoo</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/balloon_sculp.png" alt="">
-                    <div class="img-title">Mascot Package</div>
-                </div>
+                <a href="./mascot_package.html">
+                    <div class="img-card">
+                        <img src="img/balloon_sculp.png" alt="">
+                        <div class="img-title">Mascot Package</div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
