--- a/mascot_package.html
+++ b/mascot_package.html
@@ -311,33 +311,41 @@
         </div>
         <br>
         <hr><br><br>
-        <div class="page-title">
+        <div class="page-title-black">
             Related Packages
         </div>
         <div class="row">
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/jumping_castle.png" alt="">
-                    <div class="img-title">Jumping Castle</div>
-                </div>
+                <a href="./jumping_castle.html">
+                    <div class="img-card">
+                        <img src="img/jumping_castle.png" alt="">
+                        <div class="img-title">Jumping Castle</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/balloon_sculp.png" alt="">
-                    <div class="img-title">Balloon Sculpting</div>
-                </div>
+                <a href="./balloon_sculpting.html">
+                    <div class="img-card">
+                        <img src="img/balloon_sculp.png" alt="">
+                        <div class="img-title">Balloon Sculpting</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img//henna_tattoo.png" alt="">
-                    <div class="img-title">Henna Tattoo</div>
-                </div>
+                <a href="./henna_tattoo.html">
+                    <div class="img-card">
+                        <img src="img//henna_tattoo.png" alt="">
+                        <div class="img-title">Henna Tattoo</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/face_paint.png" alt="">
-                    <div class="img-title">Face Painting & Temporary Tatto</div>
-                </div>
+                <a href="./face_painting.html">
+                    <div class="img-card">
+                        <img src="img/face_paint.png" alt="">
+                        <div class="img-title">Face Painting & Temporary Tattoo</div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
