--- a/pirate_package.html
+++ b/pirate_package.html
@@ -322,59 +322,75 @@
         </div>
         <br>
         <hr><br><br>
-        <div class="page-title">
+        <div class="page-title-black">
             Related Packages
         </div>
         <div class="row">
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/fairy.png" alt="">
-                    <div class="img-title">Fairy Package</div>
-                </div>
+                <a href="./princess_package.html">
+                    <div class="img-card">
+                        <img src="img/princess.png" alt="">
+                        <div class="img-title">Princess Package</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/princess.png" alt="">
-                    <div class="img-title">Princess Package</div>
-                </div>
+                <a href="./pirate_package.html">
+                    <div class="img-card">
+                        <img src="img/pirate.png" alt="">
+                        <div class="img-title">Pirate Package</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/elsa-anna.png" alt="">
-                    <div class="img-title">The Ever Enchanting Elsa or Anna</div>
-                </div>
+                <a href="./elsa_or_enna.html">
+                    <div class="img-card">
+                        <img src="img/elsa-anna.png" alt="">
+                        <div class="img-title">The Ever Enchanting Elsa or Anna</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/elsa-and-anna.png" alt="">
-                    <div class="img-title">Elsa and Anna</div>
-                </div>
+                <a href="./elsa_and_enna.html">
+                    <div class="img-card">
+                        <img src="img/elsa-and-anna.png" alt="">
+                        <div class="img-title">Elsa and Anna</div>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/elsa-anna-olaf.png" alt="">
-                    <div class="img-title">Elsa, Anna, and Olaf</div>
-                </div>
+                <a href="./elsa_enna_olaf.html">
+                    <div class="img-card">
+                        <img src="img/elsa-anna-olaf.png" alt="">
+                        <div class="img-title">Elsa, Anna, and Olaf</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/clown.png" alt="">
-                    <div class="img-title">Clown Package</div>
-                </div>
+                <a href="./clown_package.html">
+                    <div class="img-card">
+                        <img src="img/clown.png" alt="">
+                        <div class="img-title">Clown Package</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/hero.png" alt="">
-                    <div class="img-title">Superhero Package</div>
-                </div>
+                <a href="./superhero_package.html">
+                    <div class="img-card">
+                        <img src="img/hero.png" alt="">
+                        <div class="img-title">Superhero Package</div>
+                    </div>
+                </a>
             </div>
             <div class="col-md-3">
-                <div class="img-card">
-                    <img src="img/magician.jpg" alt="">
-                    <div class="img-title">Magician Package</div>
-                </div>
+                <a href="./magician_package.html">
+                    <div class="img-card">
+                        <img src="img/magician.jpg" alt="">
+                        <div class="img-title">Magician Package</div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
