--- a/clown_package.html
+++ b/clown_package.html
@@ -378,10 +378,10 @@
                 </a>
             </div>
             <div class="col-md-3">
-                <a href="./clown_package.html">
+                <a href="./fairy_package.html">
                     <div class="img-card">
-                        <img src="img/clown.png" alt="">
-                        <div class="img-title">Clown Package</div>
+                        <img src="img/fairy.png" alt="">
+                        <div class="img-title">Fairy Package</div>
                     </div>
                 </a>
             </div>
