--- a/elsa_and_enna.html
+++ b/elsa_and_enna.html
@@ -360,10 +360,10 @@
                 </a>
             </div>
             <div class="col-md-3">
-                <a href="./elsa_and_enna.html">
+                <a href="./fairy_package.html">
                     <div class="img-card">
-                        <img src="img/elsa-and-anna.png" alt="">
-                        <div class="img-title">Elsa and Anna</div>
+                        <img src="img/fairy.png" alt="">
+                        <div class="img-title">Fairy Package</div>
                     </div>
                 </a>
             </div>
