--- a/elsa_enna_olaf.html
+++ b/elsa_enna_olaf.html
@@ -370,10 +370,10 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                <a href="./elsa_enna_olaf.html">
+                <a href="./fairy_package.html">
                     <div class="img-card">
-                        <img src="img/elsa-anna-olaf.png" alt="">
-                        <div class="img-title">Elsa, Anna, and Olaf</div>
+                        <img src="img/fairy.png" alt="">
+                        <div class="img-title">Fairy Package</div>
                     </div>
                 </a>
             </div>
