--- a/princess_package.html
+++ b/princess_package.html
@@ -347,10 +347,10 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                <a href="./princess_package.html">
+                <a href="./fairy_package.html">
                     <div class="img-card">
-                        <img src="img/princess.png" alt="">
-                        <div class="img-title">Princess Package</div>
+                        <img src="img/fairy.png" alt="">
+                        <div class="img-title">Fairy Package</div>
                     </div>
                 </a>
             </div>
