--- a/magician_package.html
+++ b/magician_package.html
@@ -394,10 +394,10 @@
                 </a>
             </div>
             <div class="col-md-3">
-                <a href="./magician_package.html">
+                <a href="./fairy_package.html">
                     <div class="img-card">
-                        <img src="img/magician.jpg" alt="">
-                        <div class="img-title">Magician Package</div>
+                        <img src="img/fairy.png" alt="">
+                        <div class="img-title">Fairy Package</div>
                     </div>
                 </a>
             </div>
