--- a/superhero_package.html
+++ b/superhero_package.html
@@ -386,10 +386,10 @@
                 </a>
             </div>
             <div class="col-md-3">
-                <a href="./superhero_package.html">
+                <a href="./fairy_package.html">
                     <div class="img-card">
-                        <img src="img/hero.png" alt="">
-                        <div class="img-title">Superhero Package</div>
+                        <img src="img/fairy.png" alt="">
+                        <div class="img-title">Fairy Package</div>
                     </div>
                 </a>
             </div>
