--- a/sports_events.html
+++ b/sports_events.html
@@ -342,6 +342,11 @@
                 </div>
             </div>
         </div>
+        <div class="text-center">
+            <br><br><br>
+            <p>Developed an Maintained by <a href="https://rosetech.dev" style="color: red;">RoseTech Solutions
+                    Ltd.</a></p>
+        </div>
 
     </footer>
 
